# bloghoster

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
.cargo/: config.toml
migrations/: 20240502025614_init.up.sql
src/: analytics.rs  main.rs
templates/analytics/: index.html.tera
