[package]
name = "bloghoster"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
git2 = "0.18.1"
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros"]}
serde = "1.0.200"
serde_json = "1.0.116"
sha2 = "0.10.8"
tera = "1.19.1"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]
